refactor: pick from dashboard_refactor, refactor fish APIs
